test/shouldFail/procWithReturnType.pas
program Sample;

procedure foo() : integer;
begin
    foo := 42;
end;

begin
    foo();
end.